# particle-thermometer

./: CMakeLists.txt  README.md  build.sh  conanfile.txt
firmware/: application.cpp
